...
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:text="Sign in:"
            android:textColor="#1E4072"
            android:textSize="32dp" />


        <EditText
            android:id="@+id/editText2"
...
