...
            android:layout_height="45dp"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/mybutton2"
            android:onClick="changeData"
            android:text="Log out"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
...
