<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="230dp"
android:gravity="bottom"
android:orientation="vertical"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/arya_bold"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:scaleType="fitCenter"
        android:text="Harry Potter"
        android:textColor="#1E4072"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-70dp"
        android:fontFamily="@font/arya"
        android:paddingBottom="20dp"
        android:paddingTop="-10dp"
        android:scaleType="fitCenter"
        android:text="myEmail"
        android:textColor="#1E4072"
        android:textSize="20dp" />


</LinearLayout>